# Engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
include/: sfml_includes.hpp
include/engine/: component.hpp  engine.hpp  entity.hpp  input.hpp  renderer.hpp  scene.hpp  sceneManager.hpp
include/game/components/: debugOverlay.hpp  fpsText.hpp  sprite.hpp  view.hpp  voronoidiagram.hpp
include/game/scenes/: sMainMenu.hpp  sMainTest.hpp
src/: main.cpp
src/engine/: engine.cpp  entity.cpp  input.cpp  renderer.cpp  scene.cpp  sceneManager.cpp
src/game/components/: debugOverlay.cpp  fpsText.cpp  sprite.cpp  view.cpp  voronoidiagram.cpp
src/game/scenes/: sMainMenu.cpp  sMainTest.cpp
